--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -18,5 +18,6 @@ $menu-bg-color: #ffffff;
 $font-color: #494949;
 
 // Gradient Styles
+$icon-gradient:  linear-gradient(0, rgba(104,79,120,1) 50%, rgba(226,100,121,1) 100%);
 $gradient-1:  linear-gradient(90deg, rgba(104,79,120,1) 50%, rgba(226,100,121,1) 100%);
 $gradient-2:  linear-gradient(90deg, rgba(242,101,41,1) 50%, rgba(247,148,30,1) 100%);
