--- a/assets/styles/_resets.scss
+++ b/assets/styles/_resets.scss
@@ -15,6 +15,8 @@ html {
 *:after {
   box-sizing: border-box;
   margin: 0;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .button--green {
