--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -17,7 +17,8 @@
        url('~assets/fonts/bpg-web-001-webfont.svg#bpg_web_001regular') format('svg'); /* Legacy iOS */
 }
 
-$font-caps: 'BPG WEB 001 Caps';
+$font-caps: 'CAPS FONT';
+// $font-caps: 'BPG WEB 001 Caps';
 $font: 'BPG WEB 001';
 
 %buttons-main {
