--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import './nouislider';
+@import '../fonts/NinoMtavruli/css/bpg-nino-mtavruli.min.css';
 @import './fonts';
 @import './resets';
 @import './variables';
