created verification mocking functionalit

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -2,6 +2,7 @@
 //color sets
 
 // Action Colors
+$orange: #f26529;
 $action-primary-color: #f26529;
 $action-secondary-important-color: #4b3f99;
 $action-secondary-color: #9e91b6;
