added login view still needs some work

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -3,6 +3,7 @@
 
 // Action Colors
 $orange: #f26529;
+$purple: #4b3f99;
 $action-primary-color: #f26529;
 $action-secondary-important-color: #4b3f99;
 $action-secondary-color: #9e91b6;
