--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -7,6 +7,7 @@
        url('~assets/fonts/bpg-web-001-caps-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
        url('~assets/fonts/bpg-web-001-caps-webfont.svg#bpg_web_001_capsregular') format('svg'); /* Legacy iOS */
 }
+
 @font-face {
   font-family: 'BPG WEB 001';
   src: url('~assets/fonts/bpg-web-001-webfont.eot'); /* IE9 Compat Modes */
@@ -15,6 +16,16 @@
        url('~assets/fonts/bpg-web-001-webfont.woff') format('woff'), /* Pretty Modern Browsers */
        url('~assets/fonts/bpg-web-001-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
        url('~assets/fonts/bpg-web-001-webfont.svg#bpg_web_001regular') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'BPG Nino Mtavruli';
+  src: url('~assets/fonts/NinoMtavruli/fonts/bpg-nino-mtavruli-webfont.eot'); /* IE9 Compat Modes */
+  src: url('~assets/fonts/NinoMtavruli/fonts/bpg-nino-mtavruli-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('~assets/fonts/NinoMtavruli/fonts/bpg-nino-mtavruli-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+  url('~assets/fonts/NinoMtavruli/fonts/bpg-nino-mtavruli-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+  url('~assets/fonts/NinoMtavruli/fonts/bpg-nino-mtavruli-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('~assets/fonts/NinoMtavruli/fonts/bpg-nino-mtavruli-webfont.svg') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
@@ -42,6 +53,7 @@ $font: 'BPG WEB 001', sans-serif;
   letter-spacing: 1px;
   font-weight: 200;
 }
+
 [lang=en] *{
   font-family: 'Heebo', sans-serif !important;
 }
