Sprint 8 changed copies and some minor bugs

--- a/assets/styles/_resets.scss
+++ b/assets/styles/_resets.scss
@@ -10,9 +10,12 @@ html {
   box-sizing: border-box;
 }
 
-input, p{
+input {
   font-family: $font;
   user-select: all !important;
+}
+p {
+  font-family: $font;
 }
 *,
 *:before,
