fixed minro issues

--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -55,4 +55,5 @@ $font: 'BPG WEB 001', sans-serif;
 
 [lang=en] *{
   font-family: 'Heebo', sans-serif !important;
+  // font-family: arial !important;
 }
