added inactivity logout

--- a/assets/styles/_resets.scss
+++ b/assets/styles/_resets.scss
@@ -1,6 +1,4 @@
 html {
-  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, 'Helvetica Neue', Arial, sans-serif;
   font-size: 16px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -14,7 +12,7 @@ input {
   font-family: $font;
   user-select: all !important;
 }
-p {
+p, li {
   font-family: $font;
 }
 *,
